--- a/cambusa.html
+++ b/cambusa.html
@@ -115,49 +115,57 @@
         <div id="pantry-grid" class="grid grid-cols-2 md:grid-cols-4 gap-2 pb-20"></div>
     </section>
 
-    <section id="view-restock-public" class="hidden fade-in max-w-2xl mx-auto h-full flex flex-col">
+    <section id="view-restock-public" class="hidden fade-in max-w-7xl mx-auto h-full flex flex-col">
         <div class="mb-4 border-b border-blue-200 pb-2 shrink-0">
             <h1 class="text-2xl font-extrabold text-blue-900">Rifornimento</h1>
-            <p class="text-xs text-gray-500">Aggiungi spesa o nuovi acquisti.</p>
+            <p class="text-xs text-gray-500">Seleziona cosa caricare o aggiungi nuovi prodotti.</p>
         </div>
 
         <div id="restock-step-1" class="flex-grow flex flex-col overflow-hidden">
             <div class="flex gap-2 mb-3 shrink-0">
-                <input type="text" id="restock-search" onkeyup="restock.renderSearch()" placeholder="Cerca per aggiungere..." class="flex-grow p-3 border rounded-l-lg shadow-sm">
-                <button onclick="restock.openNewModal()" class="bg-blue-600 text-white px-4 rounded-r-lg font-bold text-xs shadow-sm whitespace-nowrap">+ NUOVO</button>
+                <input type="text" id="restock-search" onkeyup="restock.renderList()" placeholder="🔍 Cerca per nome..." class="flex-grow p-3 border rounded-xl shadow-sm focus:ring-2 focus:ring-blue-500 outline-none">
+                <button onclick="restock.openNewModal()" class="bg-blue-600 text-white px-4 rounded-xl font-bold text-xs shadow-md whitespace-nowrap hover:bg-blue-700 transition flex items-center gap-2">
+                    <span class="text-xl">+</span> <span class="hidden sm:inline">NUOVO PRODOTTO</span>
+                </button>
             </div>
             
-            <div id="restock-search-results" class="flex-grow overflow-y-auto space-y-2 pb-4 pr-1">
-                </div>
+            <div id="restock-grid" class="flex-grow overflow-y-auto grid grid-cols-2 md:grid-cols-4 gap-2 pb-4 pr-1"></div>
 
             <div class="mt-auto pt-4 border-t shrink-0">
-                <button onclick="restock.goToStep2()" class="w-full bg-blue-800 text-white font-bold py-3 rounded-lg shadow-lg flex justify-between px-6 items-center">
+                <button onclick="restock.goToStep2()" class="w-full bg-blue-900 text-white font-bold py-4 rounded-xl shadow-xl flex justify-between px-6 items-center hover:bg-blue-800 transition transform active:scale-95">
                     <span>VAI AL RIEPILOGO</span>
-                    <span id="restock-count-badge" class="bg-yellow-400 text-blue-900 text-xs px-2 py-1 rounded-full font-bold">0</span>
+                    <span id="restock-count-badge" class="bg-yellow-400 text-blue-900 text-sm px-3 py-1 rounded-full font-bold shadow">0</span>
                 </button>
             </div>
         </div>
 
-        <div id="restock-step-2" class="hidden flex-grow flex flex-col h-full">
-            <h3 class="font-bold text-lg text-gray-700 mb-3 shrink-0">🛒 Riepilogo Carico</h3>
-            <div id="restock-summary-list" class="flex-grow overflow-y-auto space-y-2 bg-gray-50 p-2 rounded border mb-4"></div>
+        <div id="restock-step-2" class="hidden flex-grow flex flex-col h-full max-w-2xl mx-auto w-full">
+            <h3 class="font-bold text-xl text-blue-900 mb-3 shrink-0 flex items-center gap-2">🛒 Conferma Carico</h3>
+            <div id="restock-summary-list" class="flex-grow overflow-y-auto space-y-2 bg-white p-2 rounded-xl border border-blue-100 mb-4 shadow-inner"></div>
             
             <div class="grid grid-cols-2 gap-3 shrink-0 mt-auto">
-                <button onclick="restock.backToStep1()" class="bg-gray-200 text-gray-700 font-bold py-3 rounded-lg">INDIETRO</button>
-                <button onclick="restock.submitTotal()" class="bg-green-600 text-white font-bold py-3 rounded-lg shadow-lg">CONFERMA INVIO 🚀</button>
+                <button onclick="restock.backToStep1()" class="bg-gray-200 text-gray-700 font-bold py-3 rounded-xl hover:bg-gray-300">INDIETRO</button>
+                <button onclick="restock.submitTotal()" class="bg-green-600 text-white font-bold py-3 rounded-xl shadow-lg hover:bg-green-700">INVIA TUTTO 🚀</button>
             </div>
         </div>
     </section>
-
     <section id="view-recipes" class="hidden fade-in">
-        <div class="flex justify-between items-end mb-4 border-b border-orange-200 pb-2">
+        <div class="flex justify-between items-center mb-6 border-b border-red-200 pb-4">
             <div>
-                <h1 class="text-2xl font-extrabold text-red-900">Ricettario</h1>
-                <p class="text-xs text-gray-500">Crea e consulta le ricette.</p>
+                <h1 class="text-3xl font-extrabold text-red-900">Il Ricettario</h1>
+                <p class="text-sm text-gray-500 font-medium">Le nostre tradizioni culinarie.</p>
             </div>
-            <button onclick="recipes.openModal()" class="bg-red-600 text-white px-4 py-2 rounded text-xs font-bold shadow">+ Crea Ricetta</button>
+            <button onclick="recipes.openModal()" class="bg-red-600 hover:bg-red-700 text-white px-4 py-3 rounded-xl text-sm font-bold shadow-lg transition flex items-center gap-2">
+                <span>👨‍🍳</span> <span class="hidden sm:inline">Nuova Ricetta</span>
+            </button>
         </div>
-        <div id="recipes-list" class="grid grid-cols-1 md:grid-cols-2 gap-3"></div>
+
+        <div class="mb-4">
+             <input type="text" id="recipe-search" onkeyup="recipes.renderList()" placeholder="🔍 Cerca ricetta (es. Carbonara)..." class="w-full p-3 border rounded-xl shadow-sm focus:ring-2 focus:ring-red-500 outline-none">
+        </div>
+
+        <div id="recipes-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 pb-20">
+            </div>
     </section>
 
     <section id="view-planner" class="hidden fade-in">
@@ -190,22 +198,26 @@
     <section id="view-admin" class="hidden fade-in">
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-4">
              <div class="lg:col-span-1 space-y-2">
-                <button onclick="admin.tab('approvals')" class="w-full text-left p-3 rounded bg-white font-bold border-l-4 border-blue-500 shadow-sm">🔔 Approvazioni <span id="badge-approvals" class="bg-red-500 text-white text-[10px] px-2 rounded-full hidden">!</span></button>
-                <button onclick="admin.tab('movements')" class="w-full text-left p-3 rounded bg-white font-bold border-l-4 border-teal-500 shadow-sm">📊 Movimenti</button>
-                <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white font-bold border-l-4 border-orange-500 shadow-sm">✏️ Gestione Dispensa</button>
+                <button onclick="admin.tab('approvals')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-blue-500 shadow-sm hover:bg-blue-50 transition">🔔 Approvazioni <span id="badge-approvals" class="bg-red-500 text-white text-[10px] px-2 rounded-full hidden">!</span></button>
+                <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-orange-500 shadow-sm hover:bg-orange-50 transition">✏️ Gestione Dispensa</button>
+                <button onclick="admin.tab('movements')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-teal-500 shadow-sm hover:bg-teal-50 transition">📊 Movimenti</button>
             </div>
 
             <div class="lg:col-span-3">
-                <div id="admin-tab-approvals" class="admin-tab bg-white p-6 rounded-xl shadow">
-                    <h3 class="font-bold text-xl text-blue-900 mb-4">Richieste di Rifornimento</h3>
+                <div id="admin-tab-approvals" class="admin-tab bg-white p-6 rounded-xl shadow-md border border-blue-100">
+                    <h3 class="font-bold text-xl text-blue-900 mb-4 flex items-center gap-2">📥 Richieste in arrivo</h3>
                     <div id="admin-approval-list" class="space-y-3"></div>
                 </div>
 
-                <div id="admin-tab-movements" class="admin-tab hidden bg-white p-6 rounded-xl shadow">
-                     <div id="movements-list"></div>
+                <div id="admin-tab-stock" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-orange-100">
+                     <h3 class="font-bold text-xl text-orange-900 mb-4">📦 Inventario Completo</h3>
+                     <input type="text" id="admin-search" onkeyup="admin.filterStock()" placeholder="Cerca oggetto..." class="w-full p-2 border rounded mb-4 text-sm">
+                     <div id="admin-list" class="divide-y max-h-[60vh] overflow-y-auto pr-2"></div>
                 </div>
-                <div id="admin-tab-stock" class="admin-tab hidden bg-white p-6 rounded-xl shadow">
-                     <div id="admin-list" class="divide-y max-h-[60vh] overflow-y-auto"></div>
+
+                <div id="admin-tab-movements" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-teal-100">
+                     <h3 class="font-bold text-xl text-teal-900 mb-4">📜 Registro Movimenti</h3>
+                     <div id="movements-list" class="space-y-2"></div>
                 </div>
             </div>
         </div>
