--- a/cambusa.html
+++ b/cambusa.html
@@ -120,37 +120,26 @@
         <div id="pantry-grid" class="grid grid-cols-2 md:grid-cols-4 gap-2 pb-20"></div>
     </section>
 
-    <section id="view-restock-public" class="hidden fade-in max-w-7xl mx-auto h-full flex flex-col">
-        <div class="mb-4 border-b border-blue-200 pb-2 shrink-0">
-            <h1 class="text-2xl font-extrabold text-blue-900">Rifornimento</h1>
-            <p class="text-xs text-gray-500">Seleziona cosa caricare o aggiungi nuovi prodotti.</p>
-        </div>
-
-        <div id="restock-step-1" class="flex-grow flex flex-col overflow-hidden">
-            <div class="flex gap-2 mb-3 shrink-0">
-                <input type="text" id="restock-search" onkeyup="restock.renderList()" placeholder="🔍 Cerca per nome..." class="flex-grow p-3 border rounded-xl shadow-sm focus:ring-2 focus:ring-blue-500 outline-none">
-                <button onclick="restock.openNewModal()" class="bg-blue-600 text-white px-4 rounded-xl font-bold text-xs shadow-md whitespace-nowrap hover:bg-blue-700 transition flex items-center gap-2">
-                    <span class="text-xl">+</span> <span class="hidden sm:inline">NUOVO PRODOTTO</span>
-                </button>
-            </div>
+    <section id="view-restock-public" class="hidden fade-in h-full flex flex-col">
+        <div class="p-4 border-b border-orange-200 bg-white sticky top-0 z-20 shadow-sm">
+            <h1 class="text-2xl font-extrabold text-orange-900 mb-1">Rifornimento</h1>
+            <p class="text-xs text-gray-500 mb-3">Aggiorna scorte e scadenze in massa.</p>
             
-            <div id="restock-grid" class="flex-grow overflow-y-auto grid grid-cols-2 md:grid-cols-4 gap-2 pb-4 pr-1"></div>
-
-            <div class="mt-auto pt-4 border-t shrink-0">
-                <button onclick="restock.goToStep2()" class="w-full bg-blue-900 text-white font-bold py-4 rounded-xl shadow-xl flex justify-between px-6 items-center hover:bg-blue-800 transition transform active:scale-95">
-                    <span>VAI AL RIEPILOGO</span>
-                    <span id="restock-count-badge" class="bg-yellow-400 text-blue-900 text-sm px-3 py-1 rounded-full font-bold shadow">0</span>
-                </button>
+            <div class="relative">
+                <input type="text" id="restock-search" onkeyup="restock.renderList()" placeholder="🔍 Cerca prodotto..." 
+                    class="w-full p-3 pl-10 border-2 border-orange-100 rounded-xl font-bold text-gray-700 focus:border-orange-500 outline-none transition bg-gray-50 focus:bg-white">
+                <span class="absolute left-3 top-3.5 text-gray-400">⚡</span>
             </div>
         </div>
 
-        <div id="restock-step-2" class="hidden flex-grow flex flex-col h-full max-w-2xl mx-auto w-full">
-            <h3 class="font-bold text-xl text-blue-900 mb-3 shrink-0 flex items-center gap-2">🛒 Conferma Carico</h3>
-            <div id="restock-summary-list" class="flex-grow overflow-y-auto space-y-2 bg-white p-2 rounded-xl border border-blue-100 mb-4 shadow-inner"></div>
-            
-            <div class="grid grid-cols-2 gap-3 shrink-0 mt-auto">
-                <button onclick="restock.backToStep1()" class="bg-gray-200 text-gray-700 font-bold py-3 rounded-xl hover:bg-gray-300">INDIETRO</button>
-                <button onclick="restock.submitTotal()" class="bg-green-600 text-white font-bold py-3 rounded-xl shadow-lg hover:bg-green-700">INVIA TUTTO 🚀</button>
+        <div id="restock-full-list" class="flex-grow overflow-y-auto p-3 space-y-3 pb-32 bg-orange-50/50">
+            </div>
+
+        <div class="fixed bottom-20 left-0 right-0 p-4 bg-gradient-to-t from-white via-white to-transparent z-30 pointer-events-none">
+            <div class="max-w-7xl mx-auto pointer-events-auto">
+                <button onclick="restock.submitUpdates()" class="w-full bg-green-600 text-white font-extrabold py-4 rounded-xl shadow-xl hover:bg-green-700 transition transform active:scale-95 flex justify-center items-center gap-2 border-b-4 border-green-800">
+                    <span>💾 SALVA RIFORNIMENTO</span>
+                </button>
             </div>
         </div>
     </section>
